--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: url(https://vkceyugu.cdn.bspapp.com/VKCEYUGU-dec470b0-fed6-46e5-be53-ec85fadc01be/70addcb2-7a6f-424d-b3da-407dfb4da9ed.png) no-repeat center center;
+    background: black no-repeat center center;
     background-size: cover;
     height: 100vh;
 }
